--- a/src/it4you-assistant/package.json
+++ b/src/it4you-assistant/package.json
@@ -9,12 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.12",
+    "@nextui-org/react": "^2.2.10",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "cookie": "^0.6.0",
+    "framer-motion": "^11.0.12",
     "http-proxy-agent": "^7.0.2",
     "https-proxy-agent": "^7.0.4",
     "jsonwebtoken": "^9.0.2",
@@ -22,7 +21,8 @@
     "next-connect": "^1.0.0",
     "openai": "^4.28.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -31,8 +31,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.18",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
