--- a/src/it4you-assistant/.env.example
+++ b/src/it4you-assistant/.env.example
@@ -1,6 +1,4 @@
 # OPENAI
-OPENAI_KEY=your_openai_key
-OPENAI_ORG=your_openai_org_id
-# AUTHENTICATION
-AUTH_USERNAME=your_username
-AUTH_TOKEN=your_token_password
+OPENAI_KEY=<insert>
+OPENAI_ORG=<insert>
+FILE_IDS=<insert>
