--- a/src/it4you-assistant/package.json
+++ b/src/it4you-assistant/package.json
@@ -22,7 +22,9 @@
     "openai": "^4.28.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-speech-recognition": "^3.10.0",
+    "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -31,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-speech-recognition": "^3.9.5",
     "autoprefixer": "^10.4.18",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
