--- a/src/it4you-assistant/package.json
+++ b/src/it4you-assistant/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
@@ -38,6 +39,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
